<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Post-MVP vague 1 — fondations données : categories, users.gold, items.
 *
 * PMVP-001 (categories), PMVP-003 (gold), PMVP-012 (items catalogue).
 */
final class Version20260528170000 extends AbstractMigration
{
    public function getDescription(): string
    {
        return 'Post-MVP vague 1 : table categories, colonne users.gold, table items + seed.';
    }

    public function up(Schema $schema): void
    {
        $this->addSql(<<<'SQL'
            CREATE TABLE categories (
                id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
                name VARCHAR(100) NOT NULL,
                linked_stat VARCHAR(20) NOT NULL,
                PRIMARY KEY (id)
            )
        SQL);

        $this->addSql('CREATE UNIQUE INDEX uniq_categories_name ON categories (name)');

        $this->addSql(<<<'SQL'
            ALTER TABLE categories
            ADD CONSTRAINT chk_categories_linked_stat
            CHECK (linked_stat IN ('force', 'intelligence', 'discipline', 'creativity'))
        SQL);

        $this->addSql('ALTER TABLE users ADD COLUMN IF NOT EXISTS gold INT NOT NULL DEFAULT 0');

        $this->addSql(<<<'SQL'
            ALTER TABLE users
            ADD CONSTRAINT users_gold_non_negative
            CHECK (gold >= 0)
        SQL);

        $this->addSql(<<<'SQL'
            CREATE TABLE items (
                id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
                name VARCHAR(255) NOT NULL,
                description TEXT NOT NULL,
                rarity VARCHAR(20) NOT NULL,
                bonus_xp_percent INT NOT NULL DEFAULT 0,
                bonus_gold INT NOT NULL DEFAULT 0,
                bonus_stat VARCHAR(20) DEFAULT NULL,
                bonus_stat_value INT NOT NULL DEFAULT 0,
                PRIMARY KEY (id)
            )
        SQL);

        $this->addSql(<<<'SQL'
            ALTER TABLE items
            ADD CONSTRAINT chk_items_rarity
            CHECK (rarity IN ('common', 'rare', 'epic'))
        SQL);

        $this->addSql(<<<'SQL'
            ALTER TABLE items
            ADD CONSTRAINT chk_items_bonus_stat
            CHECK (bonus_stat IS NULL OR bonus_stat IN ('force', 'intelligence', 'discipline', 'creativity'))
        SQL);

        $this->addSql(<<<'SQL'
            ALTER TABLE items
            ADD CONSTRAINT chk_items_bonus_xp_percent_range
            CHECK (bonus_xp_percent BETWEEN 0 AND 100)
        SQL);

        $this->addSql(<<<'SQL'
            ALTER TABLE items
            ADD CONSTRAINT chk_items_bonus_gold_positive
            CHECK (bonus_gold >= 0)
        SQL);

        $this->addSql(<<<'SQL'
            ALTER TABLE items
            ADD CONSTRAINT chk_items_bonus_stat_value_positive
            CHECK (bonus_stat_value >= 0)
        SQL);

        $this->addSql(<<<'SQL'
            INSERT INTO items (name, description, rarity, bonus_xp_percent, bonus_gold, bonus_stat, bonus_stat_value) VALUES
                ('Tunique de l''apprenti', 'Une tunique simple portée par les héros débutants.', 'common', 5, 0, NULL, 0),
                ('Bourse en cuir', 'Petite bourse qui donne un peu plus d''or après chaque action.', 'common', 0, 5, NULL, 0),
                ('Bandeau de concentration', 'Aide à canaliser la discipline pendant l''effort.', 'rare', 10, 0, 'discipline', 1),
                ('Brassard du guerrier', 'Renforce la stat de force du héros lors des combats.', 'rare', 0, 10, 'force', 2),
                ('Couronne du sage', 'Artefact légendaire qui amplifie tous les apprentissages.', 'epic', 25, 25, 'intelligence', 3)
        SQL);
    }

    public function down(Schema $schema): void
    {
        $this->addSql('DROP TABLE IF EXISTS items');
        $this->addSql('ALTER TABLE users DROP CONSTRAINT IF EXISTS users_gold_non_negative');
        $this->addSql('ALTER TABLE users DROP COLUMN IF EXISTS gold');
        $this->addSql('DROP TABLE IF EXISTS categories');
    }
}
