<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * PMVP-002 — Stats RPG par utilisateur.
 *
 * Crée la table `stats` avec FK unique vers `users` et CHECK >= 0 sur les
 * quatre stats retenues par la décision PO PMVP-036
 * (force, intelligence, discipline, creativity).
 *
 * Backfill : insère une ligne stats à zéro pour chaque user existant afin
 * que la migration soit safe sur une base déjà peuplée (admin/user MVP).
 */
final class Version20260528180000 extends AbstractMigration
{
    public function getDescription(): string
    {
        return 'Post-MVP PMVP-002 : table stats (OneToOne user) + backfill des users existants.';
    }

    public function up(Schema $schema): void
    {
        $this->addSql(<<<'SQL'
            CREATE TABLE stats (
                id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
                user_id INT NOT NULL,
                force INT NOT NULL DEFAULT 0,
                intelligence INT NOT NULL DEFAULT 0,
                discipline INT NOT NULL DEFAULT 0,
                creativity INT NOT NULL DEFAULT 0,
                PRIMARY KEY (id)
            )
        SQL);

        $this->addSql('CREATE UNIQUE INDEX uniq_stats_user ON stats (user_id)');

        $this->addSql(<<<'SQL'
            ALTER TABLE stats
            ADD CONSTRAINT fk_stats_user
            FOREIGN KEY (user_id) REFERENCES users (id) ON DELETE CASCADE
        SQL);

        $this->addSql(<<<'SQL'
            ALTER TABLE stats
            ADD CONSTRAINT chk_stats_force_non_negative CHECK (force >= 0)
        SQL);
        $this->addSql(<<<'SQL'
            ALTER TABLE stats
            ADD CONSTRAINT chk_stats_intelligence_non_negative CHECK (intelligence >= 0)
        SQL);
        $this->addSql(<<<'SQL'
            ALTER TABLE stats
            ADD CONSTRAINT chk_stats_discipline_non_negative CHECK (discipline >= 0)
        SQL);
        $this->addSql(<<<'SQL'
            ALTER TABLE stats
            ADD CONSTRAINT chk_stats_creativity_non_negative CHECK (creativity >= 0)
        SQL);

        // Backfill : tout user existant reçoit une ligne stats à 0.
        // L'unique index sur user_id garantit qu'on n'insère pas un doublon
        // si la migration est rejouée sur une base partiellement à jour.
        $this->addSql(<<<'SQL'
            INSERT INTO stats (user_id, force, intelligence, discipline, creativity)
            SELECT u.id, 0, 0, 0, 0
            FROM users u
            WHERE NOT EXISTS (
                SELECT 1 FROM stats s WHERE s.user_id = u.id
            )
        SQL);
    }

    public function down(Schema $schema): void
    {
        $this->addSql('DROP TABLE IF EXISTS stats');
    }
}
