classDiagram
  direction LR

  class UserRole {
    <<enumeration>>
    USER
    ADMIN
  }

  class QuestKind {
    <<enumeration>>
    daily
    weekly
    progression
    event
  }

  class UserQuestStatus {
    <<enumeration>>
    in_progress
    completed
    expired
  }

  class EventScope {
    <<enumeration>>
    global
    group
    family
  }

  class NotificationSeverity {
    <<enumeration>>
    info
    urgent
  }

  class User {
    +int id
    +int xp
    +int gold
    +UserRole roles
  }

  class Stat {
    +int id
    +int userId
    +int force
    +int intelligence
    +int discipline
    +int creativity
  }

  class MonsterTemplate {
    +int id
    +string name
    +int baseHp
    +int levelMin
    +int levelMax
    +string lootTable
    +string imageUrl
  }

  class UserMonster {
    +int id
    +int userId
    +int templateId
    +int currentHp
    +int maxHp
    +bool isActive
  }

  class Item {
    +int id
    +string name
    +string rarity
  }

  class Inventory {
    +int id
    +int userId
    +int itemId
    +int quantity
    +bool isEquipped
  }

  class QuestTemplate {
    +int id
    +QuestKind kind
    +bool isActive
  }

  class QuestCondition {
    +int id
    +string kind
    +string params "JSON"
  }

  class QuestReward {
    +int id
    +int questTemplateId
    +int xp
    +int gold
    +string statRewards "JSON"
    +int itemId "nullable"
  }

  class UserQuest {
    +int id
    +int userId
    +int questTemplateId
    +UserQuestStatus status
    +int progress
  }

  class UserQuestActionLog {
    +int id
    +int userId
    +int userQuestId
    +int questConditionId
    +DateTime actionAt
    +int progressDelta
  }

  class Event {
    +int id
    +int createdByUserId
    +EventScope scope
    +DateTime startsAt
    +DateTime endsAt
    +int difficultyMultiplier
  }

  class EventConfig {
    +int id
    +int eventId
    +int bossTemplateId "nullable"
    +int itemRewardId "nullable"
    +string visual "nullable"
  }

  class EventQuestSelection {
    +int id
    +int eventId
    +int questTemplateId
  }

  class Notification {
    +int id
    +int userId
    +NotificationSeverity severity
    +bool isFullscreen
  }

  User "1" --> "0..*" Stat : has >
  User "1" --> "0..*" UserMonster : owns >
  MonsterTemplate "1" --> "0..*" UserMonster : instantiates >

  User "1" --> "0..*" Inventory : has >
  Item "1" --> "0..*" Inventory : appears_in >

  User "1" --> "0..*" UserQuestActionLog : performs >
  UserQuest "1" --> "0..*" UserQuestActionLog : updates progress >

  User "1" --> "0..*" UserQuest : has >
  QuestTemplate "1" --> "0..*" QuestCondition : defines >
  QuestTemplate "1" --> "1" QuestReward : rewards >

  Event "1" --> "0..*" EventQuestSelection : selects >
  Event "1" --> "0..1" EventConfig : configures >
  Event "1" --> "0..*" UserQuest : creates >
  User "1" --> "0..*" Event : creates >

  User "1" --> "0..*" Notification : receives >